# RMUC_CV_2026_CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  note.txt  run.sh
apps/yaml-cpp/lib/pkgconfig/: yaml-cpp.pc
calibur/: config.cc  config.h  log.cpp  log.h  singleton.h  test_camera.cpp  usb_communication.cpp  usb_communication.h  util.cpp  util.h
calibur/camera/: CMakeLists.txt
calibur/pf/: CMakeLists.txt  rbpf.cu  rbpf.cuh
calibur/pose/: CMakeLists.txt
calibur/pose/include/: config.h  infer.h
calibur/pose/src/: infer.cpp  preprocess.cu
calibur/worker/: CMakeLists.txt  camera_worker.cpp  detection_worker.cpp  display_worker.cpp  helper.hpp  imu_worker.cpp  main.cpp  pf_worker.cpp  prediction_worker.cpp  thread_pool.hpp  types.hpp  usb_worker.cpp  workers.hpp  yolo_worker.cpp
config/: log.yaml  test.yaml
sylar/: config.cc  config.h  log.cpp  log.h  singleton.h  util.cpp  util.h
tests/: test.cc  test_config.cc  test_imu.cc  test_send_data.cc
